tests/calico_testcases/example_policies/testcase15-ports/testcase15-global-simple.yaml
apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: testcase15-global-ports-simple-match-ingress-egress
spec:
  types:
  - Ingress
  - Egress
  ingress:
  - action: Allow
    protocol: TCP
    source:
      selector: app  == 'keepalived-watcher'
    destination:
      ports:
      - 80
      - 100:250

  egress:
  - action: Allow
    protocol: TCP
    destination:
      ports:
      - 200:300
      selector: !has(app)

---
apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: testcase15-global-ports-simple-mismatch-ingress-egress
spec:
  types:
  - Ingress
  - Egress
  ingress:
  - action: Allow
    protocol: TCP
    source:
      selector: app  == 'keepalived-watcher'
    destination:
      ports:
      - 80
      - 100:250

  egress:
  - action: Allow
    protocol: TCP
    destination:
      ports:
      - 90
      - 10:25
      selector: !has(app)
